<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:padding="8dp">

    <FrameLayout
        android:layout_width="64dp"
        android:layout_height="64dp">

        <ImageView
            android:id="@+id/book_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/book_image" />

        <ImageView
            android:id="@+id/favorite_overlay"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="top|start"
            android:src="@drawable/star"
            android:visibility="gone"
            android:contentDescription="@string/book_fav" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="8dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/book_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_title"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/book_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_author"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>
