<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="16sp"
        android:textColor="#333333"
        android:gravity="center"
        android:text="@string/description" />

    <EditText
        android:id="@+id/search_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_hint"
        android:inputType="text"
        android:padding="12dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <Button
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:text="@string/search_button" />

        <Button
            android:id="@+id/show_upcoming_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_upcoming_button" />
    </LinearLayout>
    <TextView
        android:id="@+id/explanation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="12sp"
        android:textColor="#999"
        android:gravity="center"
        android:text="@string/explanation" />


    <FrameLayout
        android:id="@+id/result_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <!-- 検索結果 -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/book_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <!-- 新刊リスト -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/upcoming_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible" />
    </FrameLayout>

</LinearLayout>
