<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/book_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_title"
        android:textStyle="bold"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/book_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_author"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/book_sales_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_sales_date"
        android:textSize="12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DDDDDD"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"/>

</LinearLayout>
